SERVER-59189 ensure mongos dbStats can handle large values for scale